Attempt to fix signup button not showing

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -46,6 +46,7 @@ body {
 	text-decoration: none;
 }
 #signup-button {
+	display: initial;
 	float: right;
 }
 #login-button {
